# python-odata

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
doc/: conf.py  index.rst  reflection.rst  reflector.rst  service.rst
odata/: complextype.py  connection.py  context.py  entity.py  enumtype.py  flags.py  metadata.py  navproperty.py  property.py  query.py  reflector.py  service.py  state.py
odata/reflect-templates/: entity.mako  enum_entity.mako  main.mako  property.mako  simple_property.mako  simple_type.mako
odata/tests/: test_actions.py  test_composite_keys.py  test_error.py  test_metadata.py  test_nw_manual_model.py  test_nw_reflect_and_generate_model.py
