[project]
name = "python-odata"
version = "0.7.0"
description = "A simple library for read/write access to OData services."
authors = [
    { name = "Tuomas Mursu", email = "tuomas.mursu@kapsi.fi" },
    { name = "Cristian Libotean", email = "eblis102@gmail.com" },
]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.32.0",
    "python-dateutil>=2.8.2",
    "rich>=13.3.1",
    "mako>=1.2.4",
]

[dependency-groups]
dev = [
    "responses>=0.22.0",
    "pytz>=2022.7.1",
]
docs = [
    "myst-parser>=0.16",
    "sphinx>=4.0",
    "sphinx-autobuild>=2021.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.sdist]
include = ["odata/*.py"]

[tool.hatch.build.targets.sdist.force-include]
"odata/reflect-templates" = "odata/reflect-templates"

[tool.hatch.build.targets.wheel]
include = ["odata/*.py"]

[tool.hatch.build.targets.wheel.force-include]
"odata/reflect-templates" = "odata/reflect-templates"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
